# iroha

./: CMakeLists.txt  Makefile  README.md
.circleci/: config.yml
benchmark/: CMakeLists.txt
benchmark/crypto/: CMakeLists.txt
cmake/: dependencies.cmake
core/: CMakeLists.txt
core/ametsuchi/: CMakeLists.txt
core/chaincode/: CMakeLists.txt
core/consensus/: CMakeLists.txt  block_builder.cpp  block_builder.hpp
core/crypto/: CMakeLists.txt  signature.hpp
core/infra/: CMakeLists.txt
core/infra/ametsuchi/: CMakeLists.txt
core/infra/ametsuchi/include/ametsuchi/: tx_store.h
core/infra/config/: CMakeLists.txt
core/infra/connection/: CMakeLists.txt  connection_with_grpc.cpp  connection_with_grpc_flatbuffer.cpp
core/infra/crypto/: CMakeLists.txt
core/infra/service/: CMakeLists.txt  flatbuffer_service.cpp
core/infra/service/flatbuffers/: process_union_table.hpp
core/membership_service/: CMakeLists.txt  peer_service.cpp
core/runtime/: CMakeLists.txt  runtime.cpp
core/runtime/command/: CMakeLists.txt  add.hpp  create.hpp  remove.hpp  transfer.hpp
core/service/: CMakeLists.txt  connection.hpp  flatbuffer_service.h  flatbuffer_service.hpp  peer_service.cpp  protocol_to_string.cpp  protocol_to_string.hpp
core/transport/: action.h  signature.h  transaction.h  transaction_builder.h
core/utils/: CMakeLists.txt  datetime.cpp  datetime.hpp  explore.hpp  logger.cpp  random.cpp  random_generator.cpp  random_generator.hpp
core/validator/: stateless_validator.cpp
docker/: build_in_docker.sh
docker/tiny/: Dockerfile
docs/: architecture.md
irohad/: CMakeLists.txt
irohad/ametsuchi/: ametsuchi.cpp  ametsuchi.hpp
irohad/ametsuchi/context/: context.hpp  self_status.hpp
irohad/ametsuchi/wrapper/: kvs_wrapper.hpp  rdb_wrapper.hpp
irohad/ametsuchi/wsv/: wsv.hpp
irohad/consensus/: sumeragi.hpp
irohad/consensus/connection/: client.hpp  server.hpp
irohad/main/: application.cpp  application.hpp  iroha-main.cpp
irohad/main/config/: config.cpp  config.hpp  context.h
irohad/model/: CMakeLists.txt
irohad/ordering/: ordering_service.hpp
irohad/peer_service/: peer_service.hpp
irohad/publisher/: publisher.hpp
irohad/publisher/connection/: publisher.hpp
irohad/simulator/: simulator.hpp
irohad/synchronizer/: synchronizer.hpp
irohad/synchronizer/connection/: sync_client.hpp  sync_server.hpp
irohad/torii/: torii_service.hpp
irohad/torii/connection/: torii_client.hpp  torii_server.hpp
irohad/validator/chain/: chain_validator.hpp  validator.hpp
irohad/validator/stateful/: stateful_validator.hpp
irohad/validator/stateless/: stateless_validator.hpp
schema/: CMakeLists.txt  account.fbs  asset.fbs  commands.fbs  commands.proto  domain_actions.fbs  endpoint.fbs  main.fbs  peer_actions.fbs  queries.fbs  queries.proto  transaction.fbs
test/: CMakeLists.txt
test/ametsuchi/: CMakeLists.txt
test/ametsuchi/ametsuchi/: CMakeLists.txt  ametsuchi.cc
test/consensus/: transaction_test.cpp
test/module/: CMakeLists.txt
test/module/config/: CMakeLists.txt
test/module/connection/: CMakeLists.txt
test/module/consensus/: block_builder_test.cpp
test/module/crypto/: CMakeLists.txt
test/module/expected/: CMakeLists.txt
test/module/generator/: tx_generator.h  tx_generator_test.cpp
test/module/irohad/: CMakeLists.txt
test/module/membership_service/: CMakeLists.txt
test/module/service/: CMakeLists.txt  protocol_to_string_test.cpp
test/module/utils/: CMakeLists.txt  datetime_test.cpp
test/scenario/: CMakeLists.txt
tools/: CMakeLists.txt  add_peer.cpp  bm_connection.cpp  bm_validation.cpp  bm_validation.hpp  bm_validation_ave.cpp  bm_validation_memory.cpp  bm_validation_memory_plot.py  bm_validation_throughput_plot.py  iroha_cli.cpp  make_hostdiscover.cpp
